<resources>
    <string name="app_name">KotilnExample</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">JiyoungTest</string>
    <string name="nav_header_subtitle">hjyoung92@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_news">News</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="query">
        <item>movies</item>
        <item>health</item>
        <item>k-pop</item>
        <item>bitcoin</item>
        <item>corona</item>
    </string-array>
</resources>
