<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jiyoung.kotilnexample.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.jiyoung.kotilnexample.ui.news.NewsMainFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news">

        <action
            android:id="@+id/action_nav_news_to_newsListFragment"
            app:destination="@id/newsListFragment" />
        <action
            android:id="@+id/action_nav_news_to_newsContentFragment"
            app:destination="@id/newsContentFragment" />

    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.jiyoung.kotilnexample.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.jiyoung.kotilnexample.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.jiyoung.kotilnexample.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.jiyoung.kotilnexample.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/newsListFragment"
        android:name="com.jiyoung.kotilnexample.ui.news.NewsListFragment"
        android:label="{query}"
        tools:layout="@layout/fragment_news_list">
        <argument
            android:name="query"
            app:argType="string" />
        <action
            android:id="@+id/action_newsListFragment_to_newsContentFragment"
            app:destination="@id/newsContentFragment" />
    </fragment>

    <fragment
        android:id="@+id/newsContentFragment"
        android:name="com.jiyoung.kotilnexample.ui.news.NewsContentFragment"
        android:label="NewsContentFragment" >
        <argument
            android:name="content"
            app:argType="com.jiyoung.kotilnexample.server.model.Article"/>
    </fragment>
</navigation>